# DEPO_fork

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md  common_const_intel.hpp  config.yaml  dont_use_perf_in_pcm.patch  exemplary_external_trigger.sh  params.conf
apps/DEPO/: CMakeLists.txt  dynamic_energy_performance_optimizer.cpp
apps/StEP/: CMakeLists.txt  static_energy_profiler.cpp
apps/experimental/: CMakeLists.txt  dynamic_eco_gss.cpp
apps/simple/: CMakeLists.txt  cpu_power_monitor.cpp
lib/eco/: CMakeLists.txt
lib/eco/include/: device_state.hpp  eco.hpp  eco_constants.hpp  trigger.hpp
lib/eco/include/algorithms/: abstract_search_algorithm.hpp  golden_section_search.hpp  linear_search.hpp
lib/eco/include/data_structures/: final_power_and_perf_result.hpp  power_and_perf_result.hpp  results_container.hpp
lib/eco/include/devices/: abstract_device.hpp  cuda_device.hpp  intel_device.hpp  xpu_device.hpp
lib/eco/include/logging/: log.hpp
lib/eco/include/perf_counter_interfaces/: xpu_perf_counter.hpp
lib/eco/include/power_interface/: Rapl.hpp  msr.hpp  msr_offsets.hpp
lib/eco/src/: eco.cpp  plot_builder.cpp
lib/eco/src/data_structures/: data_filter.cpp  final_power_and_perf_result.cpp  power_and_perf_result.cpp  results_container.cpp
lib/eco/src/devices/: cuda_device.cpp  intel_device.cpp  xpu_device.cpp
lib/eco/src/power_interfaces/: Rapl.cpp  msr.cpp
minibenchmarks/openmp/: Makefile  fft.c  heat.c  integrate.c
profiling_injection/: Makefile  README.txt  build.sh  injection_2.cpp
src/: Eco.cpp  Eco.hpp  cuda_device.cpp  cuda_device.hpp  depo_class_diagram.puml  gpu_eco.cpp  gpu_eco.hpp  logging.hpp  plot_builder.cpp  plot_builder.hpp  trigger.hpp
src/apps/: DynamicECO.cpp  EnergyProfiler.cpp  GetPowerCons.cpp  SetPowerLimits.cpp  dynamic_eco_gss.cpp
src/device/: Device.cpp  Device.hpp  device_state.cpp  device_state.hpp
src/helpers/: both_stream.hpp  data_filter.cpp  data_filter.hpp  eco_constants.hpp  final_power_and_perf_result.cpp  final_power_and_perf_result.hpp  log.hpp  params_config.cpp  params_config.hpp  power_and_perf_result.cpp  power_and_perf_result.hpp  results_container.cpp  results_container.hpp
src/power_if/: Rapl.cpp  Rapl.hpp  msr.cpp  msr.hpp
tests/: test_xpu.cpp
